--- a/css/style.css
+++ b/css/style.css
@@ -9942,7 +9942,7 @@ h5 + .list-popular-product {
 }
 
 .product-big-reviews, .product-big-reviews:focus, .product-big-reviews:active {
-	color: #9b9b9b;
+	color: #000000;
 }
 
 .product-big-reviews:hover {
@@ -9951,7 +9951,8 @@ h5 + .list-popular-product {
 
 .product-big-text {
 	letter-spacing: .025em;
-	color: #9b9b9b;
+	color: #000000;
+	font-weight: 500;
 }
 
 .product-big-price-wrap {
