Updated home banner with ad

--- a/css/style.css
+++ b/css/style.css
@@ -25364,7 +25364,7 @@ body {
 		background-size: cover; /* Resize the background image to cover the entire container*/
 	}
 	.home-div {
-		background-image: url("../img/home/sliderghana.jpg"); /* The image used */
+		background-image: url("../img/home/banner_ad.jpg"); /* The image used */
 		background-color: whitesmoke; /* Used if the image is unavailable */
 		height: 500px; /* You must set a specified height */
 		background-position: center; /* Center the image */
@@ -25385,7 +25385,7 @@ body {
 		background-size: cover; /* Resize the background image to cover the entire container*/
 	}
 	.home-div {
-		background-image: url("../img/home/sliderghana.jpg"); /* The image used */
+		background-image: url("../img/home/banner_ad.jpg"); /* The image used */
 		background-color: whitesmoke; /* Used if the image is unavailable */
 		height: 500px; /* You must set a specified height */
 		background-position: center; /* Center the image */
@@ -25406,7 +25406,7 @@ body {
 		background-size: cover; /* Resize the background image to cover the entire container*/
 	}
 	.home-div {
-		background-image: url("../img/home/sliderghana.jpg"); /* The image used */
+		background-image: url("../img/home/banner_ad_mobile.jpg"); /* The image used */
 		background-color: whitesmoke; /* Used if the image is unavailable */
 		height: 500px; /* You must set a specified height */
 		background-position: center; /* Center the image */
@@ -25427,7 +25427,7 @@ body {
 		background-size: cover; /* Resize the background image to cover the entire container*/	
 	}
 	.home-div {
-		background-image: url("../img/home/sliderghana.jpg"); /* The image used */
+		background-image: url("../img/home/banner_ad.jpg"); /* The image used */
 		background-color: whitesmoke; /* Used if the image is unavailable */
 		height: 500px; /* You must set a specified height */
 		background-position: center; /* Center the image */
